修复text to image页面和首页根据UI设计简单改改

--- a/src/config/style/global.css
+++ b/src/config/style/global.css
@@ -101,6 +101,16 @@ pre {
       transform: translateY(calc(-100% - var(--gap)));
     }
   }
+
+  --animate-scroll: scroll 40s linear infinite;
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
 }
 
 ::view-transition-old(root),
